Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-4174

MariaDB 5.5 thread pool code fails to build on OpenBSD / NetBSD / DragonFly

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 5.5.29
    • 5.5.30
    • None
    • None
    • OpenBSD

    Description

      The thread pool code within MariaDB 5.5 and other newer/older releases fails to build on OpenBSD / NetBSD / DragonFly, etc. These other *BSD OS's also have kqueue support. The attached patch adds the other *BSD OS's to the #if def's within the code to make the code build.

      Attachments

        Issue Links

          Activity

            People

              wlad Vladislav Vaintroub
              brad0 Brad Smith
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 0.25d
                  0.25d

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.